<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="voting_location">Voting Locations</string>
    <string name="address_text">Address</string>
    <string name="error_failed_load_upcoming_elections_t" formatted="false">Failed to load upcoming elections</string>
    <string name="use_my_location_text">Use my location</string>
    <string name="address_line_1_text">Address Line 1</string>
    <string name="voter_unfollow">Unfollow election</string>
    <string name="upcoming_elections_header_text">Upcoming Elections</string>
    <string name="launch_logo_description_text">Home screen logo</string>
    <string name="error_failed_get_address_from_location_text">Can\'t get address for you location</string>
    <string name="my_representatives_header_text">My Representatives</string>
    <string name="find_my_representatives_text">Find my representatives</string>
    <string name="error_missing_city_text">Enter city</string>
    <string name="representative_failed_parse_location_text">Failed retrieve location details</string>
    <string name="city_text">City</string>
    <string name="app_name_text">Political Preparedness</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="error_missing_state_text">State field is required</string>
    <string name="error_location_permission_denied_text">Location permission denied!</string>
    <string name="address_line_2_text">Address Line 2</string>
    <string name="representative_search_text">Representative Search</string>
    <string name="find_representatives_btn_text">Find my representatives</string>
    <string name="upcoming_elections_text_text">Upcoming elections</string>
    <string name="error_failed_load_voter_info_text">Failed to load details using your location information</string>
    <string name="zipcode">Zipcode</string>
    <string name="add_to_follow">Follow election</string>
    <string name="fb_page_text">%s facebook page</string>
    <string name="error_missing_first_line_address_text">Enter first line address</string>
    <string name="saved_elections_header_text">Saved elections</string>
    <string name="error_missing_zip_text">Enter zip code</string>
    <string name="election_name">election name</string>
    <string name="election_info">Election Information</string>
    <string-array name="svg_strings">
        <item>M309.5,52.5l-2.5,2.4 0,25c0,25 0,25 2.4,27.8l2.4,2.8 24.1,0.3 24.1,0.3 0,-30.5 0,-30.6 -24,-0 -24.1,-0 -2.4,2.5z</item>
    <item>M246,68.3c-23.4,14.2 -24.5,14.9 -27.5,20.2 -2.2,3.7 -10.5,26.4 -10.5,28.7 0,0.4 4.3,0.8 9.6,0.8l9.5,-0 1.3,-3.3c0.7,-1.7 2.1,-5.3 3,-8 2.1,-5.7 5.4,-7.7 12.6,-7.7 5.7,-0 9,1.3 9,3.6 0,0.8 -6.3,8.4 -14,16.9 -7.7,8.5 -14.5,16.7 -15,18.1 -2.6,6.7 0.3,13.1 5.3,11.8 1.6,-0.3 14.9,-9.2 29.5,-19.6l26.7,-18.9 2,-5.5c1.4,-3.5 3.9,-7.2 7.3,-10.7l5.2,-5.3 0,-16.2 0,-16.2 -17.7,-0 -17.8,-0 -18.5,11.3z</item>
    <item>M183,167.5l0,42.5 49.5,-0 49.5,-0 0,-42.5c0,-42.1 0,-42.5 -2,-42.5 -1.2,-0 -11.5,6.7 -23,14.9 -11.5,8.2 -22.5,15.5 -24.5,16.1 -14.6,4.8 -22.2,-13.4 -11.3,-27.3l2.9,-3.7 -20.6,-0 -20.5,-0 0,42.5z</item>
    <item>M131.1,182.2c-1,2.4 -7.3,16.6 -14,31.6l-12.1,27.2 0,11 0,11 127.5,-0 127.5,-0 0,-11.3 -0.1,-11.2 -13.8,-31 -13.8,-31 -21.6,-0.3 -21.7,-0.2 0,10.5 0,10.5 6.4,-0 6.5,-0 2.5,8.4c1.4,4.6 2.6,8.7 2.6,9 0,0.3 -33.6,0.6 -74.6,0.6 -59.3,-0 -74.5,-0.3 -74.1,-1.3 0.2,-0.6 1.4,-4.7 2.7,-9l2.3,-7.7 6.3,-0 6.4,-0 0,-10.5 0,-10.5 -21.5,-0 -21.6,-0 -1.8,4.2z</item>
    <item>M112,288l0,18 120.5,-0 120.5,-0 0,-18 0,-18 -120.5,-0 -120.5,-0 0,18z</item>
    </string-array>
    <integer-array name="svg_strings_colours">
            <item>@android:color/white</item>
            <item>@android:color/white</item>
            <item>@color/colorAccent</item>
            <item>@android:color/white</item>
            <item>@android:color/white</item>
        </integer-array>
</resources>
